回到故事列表

--- a/story_ HsinchuTrainStation.html
+++ b/story_ HsinchuTrainStation.html
@@ -36,8 +36,8 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture">
+                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture"></a>
                 </div>
             </header>
             <main>
@@ -116,6 +116,9 @@
 
                                     </div>
                                 </div>
+                                <button class="moreBtn">
+                                    <a href="story_allArea.html">回到故事列表</a>
+                                </button>
                             </article>
                         </div>
                     </div>
