--- a/story_TaichungEslite.html
+++ b/story_TaichungEslite.html
@@ -32,7 +32,8 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true" alt="Header Picture">
+                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture"></a>
                 </div>
             </header>
             <main>
@@ -97,6 +98,9 @@
                                         <p>每天雖然僅有販售三個多小時，但在這裡已經有許多忠實讀者都會定期跟他購買，在短短的訪談時間裡，就有幾位熟客路過跟他打招呼，還有一位中女中林同學偶爾也會來找陳大哥聊天！她說：「因為上學都會經過，每一期出刊都會買來看， 從創刊號在便利商店看到時就覺得很不錯，但後來僅有台北的街友有販售，現在終於在台中也能買到！每個月一定都會來跟陳大哥買。」這裡是台中最熱門的新興地點，每天人來人往，但陳大哥也沒有延長販售時間的打算，他覺得日子過的去就好了。在收工邊收拾書包的同時，還一邊跟下個月將參加指考的林同學叮嚀要認真準備考試，努力實踐自己的夢想。</p>
                                     </div>
                                 </div>
+                                <button class="moreBtn">
+                                    <a href="story_allArea.html">回到故事列表</a>
+                                </button>
                             </article>
                         </div>
                     </div>
