--- a/story_TaipeiLongshanTemple.html
+++ b/story_TaipeiLongshanTemple.html
@@ -36,8 +36,8 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture">
+                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture"></a>
                 </div>
             </header>
             <main>
@@ -115,6 +115,9 @@
                                         <p>龍山寺站週邊的商圈燈火逐漸明亮，人群熙來攘往的在我們身邊遊走，邱伯伯心繫著賣出雜誌，而我卻納悶著何以七十多歲的他無法回到屬於自已的家？</p>
                                     </div>
                                 </div>
+                                <button class="moreBtn">
+                                    <a href="story_allArea.html">回到故事列表</a>
+                                </button>
                             </article>
                         </div>
                     </div>
