--- a/story_ KaohsiungCity.html
+++ b/story_ KaohsiungCity.html
@@ -37,8 +37,8 @@ D
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture">
+                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture"></a>
                 </div>
             </header>
             <main>
@@ -102,8 +102,7 @@ D
                                     <div class="storyTxtContent">
                                         <!-- 段落文字要改 -->
                                         <p>從2013年十月開始，大誌雜誌終於來到高雄開賣，其中一個據點就在國際建築大師理查・羅傑斯所設計的 R9
-                                            站體附近中央公園站旁的城市光廊入口處，柯大哥（貴仔）的腳踏車就直率地停在轉角的行道樹下，顯眼易找。貴仔說：「我早上八點到十二點在高師大校門口賣，下午一點到晚上九點就來中央公園賣，每天賣的時間很長，這樣客人比較好找。從去年十月就固定在這兩個地點賣雜誌了。」（編按：目前已改至高醫大與城市光廊販售）
-                                            .
+                                            站體附近中央公園站旁的城市光廊入口處，柯大哥（貴仔）的腳踏車就直率地停在轉角的行道樹下，顯眼易找。貴仔說：「我早上八點到十二點在高師大校門口賣，下午一點到晚上九點就來中央公園賣，每天賣的時間很長，這樣客人比較好找。從去年十月就固定在這兩個地點賣雜誌了。」（編按：目前已改至高醫大與城市光廊販售）.
                                         </p>
                                         <p>在這段閑晃的日子裡，貴仔偶爾也會去撿些舊物到跳蚤市場賣，賺點現金買米酒喝。貴仔說：「這幾年高雄很多地方在拆老房子，像左營眷村啦、中都窯廠啦，還有一些零星的舊厝，大家都會交流拆屋資訊，我的腳踏車後面還綁一個大籃子，就四處去搜、去撿，然後運到十全路跳蚤市場便宜賣，好一點一天賺個兩、三百塊，但現在都不能擺攤了，警察會趕人，房子也拆光沒東西撿了。」​​
                                         </p>
@@ -111,10 +110,11 @@ D
                                         </p>
                                         <p>「回臺灣後，一直沒有找到穩定的工作，後來就在公園一天度過一天。現在努力賣雜誌後生活有點改善，記得剛開始賣的前兩個月真的賣得很不好，十二月號陳綺貞做封面時就賣得不錯，然後一月號的田馥甄也賣很多本，接著就越來越穩定了，最近終於租了一間月租兩千元的矮厝，洗澡睡覺比較方便，之前也睡過網咖，但有間自己的空間還是比較自在。」。五點多下班、放學的人潮開始在中央公園流動，貴仔也下班休息吃晚餐，用完餐後，六點準時上班繼續賣到九點，然後在騎著腳踏車回矮厝睡覺，迎接明天一整天的工作。
                                         </p>
-
-
                                     </div>
                                 </div>
+                                <button class="moreBtn">
+                                    <a href="story_allArea.html">回到故事列表</a>
+                                </button>
                             </article>
                         </div>
                     </div>
