--- a/story_TaipeiNTUH.html
+++ b/story_TaipeiNTUH.html
@@ -36,8 +36,8 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture">
+                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture"></a>
                 </div>
             </header>
             <main>
@@ -104,10 +104,11 @@
                                         </p>
                                         <p>「玉蘭花我已經賣四年了，都在台北車站或台大醫院西址這一帶，每天清晨大約三、四點就去批花，每次大概批兩三百朵吧，然後自己再花一個多小時串成一串一串，大約六點多就到這附近來賣花，賣到十點多就差不多收工了，休息一下後，中午再開始賣雜誌，每天都還滿規律的。」這一年來，平常早上除了賣玉蘭花，下午又多了一份賣雜誌的工作，這樣一來生活的收入開始有明顯的改善，之前僅靠賣玉蘭花的收入，對高姐來說相當微薄。「為了還願吧！當時在友人的指點下開始賣玉蘭花，有施有得，心境也比較開朗些，生活也過得比較順。未來還是要繼續還願，繼續賣玉蘭花。」高姐帶有宗教玄機的口吻說著。「好了，警察已經走了，我要開始賣雜誌了！」高姐又環視了一下台大捷運站四周的人行道，確定沒有警察後，開始了她今天的第二份工作。
                                         </p>
-                                        <p></p>
-
                                     </div>
                                 </div>
+                                <button class="moreBtn">
+                                    <a href="story_allArea.html">回到故事列表</a>
+                                </button>
                             </article>
                         </div>
                     </div>
