--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         </ol>
                     </div> -->
                     <button class="moreBtn">
-                        <a href="all_magazine.html">預覽更多雜誌</a>
+                        <a href="all_magazine.html">瀏覽更多雜誌</a>
                     </button>
                 </section>
 
@@ -276,7 +276,7 @@
                                 </div>
                                 <div class="aboutTxt">
                                     <h3>關於我們</h3>
-                                    <h4>不只是本雜誌，對於愛文化的人，還是本工具書</h4>
+                                    <h4>不只是雜誌，對於愛文化的人，還是本工具書</h4>
                                     <p>The Big Issue 是 John Bird 在1991年在英國創辦的雜誌，內容涵括時事、社會議題及藝文資訊，目前於全球十個國家以不同版本的形式發行。特別的是，這份刊物的通路，是透過街友及弱勢族群來販售。台灣大智文創在2009年取得授權，在2010年4月1日正式創刊。</p>
                                 </div>
                             </li>
@@ -324,8 +324,8 @@
                         </div>
                         <div class="supportWay">
                             <div class="supportTxt">
-                                <p>The Big Issue 雜誌致力於帶給社會上的弱勢族群，在社會上能夠獲得更多的生活主導權，並持續努力著推動這個行動。若您剛好對 The Big Issue 有興趣，在路上見到橘色背心的夥伴，請別吝於給他們一個微笑或是實質支持，對他們來說都是偌大的鼓勵唷！</p>
-                                <p>目前個人訂閱的部分尚未開放，我們希望能夠「將當期雜誌的銷售保留給街頭販售員」，謝謝您的支持。以下三種方案的支持訂閱方式，參考了世界各國的 The Big Issue 雜誌做法，供您選擇：</p>
+                                <p>The Big Issue 雜誌致力於帶給弱勢族群，在社會上獲得更多的生活主導權，並持續努力推動著這個行動。若您對 The Big Issue 有興趣，在路上見到橘色背心的夥伴，請別吝於給他們一個微笑或是實質支持，對他們來說都是偌大的鼓勵唷！</p>
+                                <p>目前個人訂閱尚未開放，我們希望「將當期雜誌的銷售全部保留給街頭販售員」，謝謝您的支持。下面三種的支持訂閱方式，參考世界各國 The Big Issue 雜誌的做法，供您選擇：</p>
                             </div>
                             <ol class="supportList">
                                 <h2>Subscription List</h2>
@@ -363,7 +363,7 @@
                         <div class="saleStore">
                             <div class="saleStoreMaps">
                                 <div class="saleStoreTxt">
-                                    <p>販售場所的資訊會即時更新於以下的TBI Map：</p>
+                                    <p>販售場所的資訊會即時更新於以下的TBI Map</p>
                                     <p>放大或點按販售點即可看到販售時間與販售中的照片方便您找尋販售員</p>
                                     <p>當期雜誌以販售員為唯一的銷售通路，過期雜誌也可向販售員購買或透過我們的推廣站支持我們。</p>
                                     <p>因每名販售員的生活情境不同，我們會根據其作息及情況加以調整，站點也會不定期更新。</p>
@@ -375,8 +375,8 @@
                             <div class="fixedPoints">
                                 <h2>寄賣據點</h2>
                                 <div class="fixedPointTxt">
-                                    <p>若您想購買非當期的雜誌，您可以前往和我們合作的店家。</p>
-                                    <p>以下是台灣各地的寄賣場所：</p>
+                                    <p>若想購買非當期的雜誌，您可以前往與我們有合作的店家，</p>
+                                    <p>以下是我們在台灣各地的寄賣場所：</p>
                                 </div>
                                 <div class="taiwanAreas">
                                     <div class="mapsDetail">
