--- a/all_magazine 2020.html
+++ b/all_magazine 2020.html
@@ -247,7 +247,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo">
+                <ul class="footerInfo contactInfo">
                     <li>
                         <ul class="footerAboutIssue">
                             <li>地址： 八德路一段28號2樓</li>
