--- a/all_magazine.html
+++ b/all_magazine.html
@@ -95,6 +95,26 @@
                                     </ol>
                                 </li>
                             </ol>
+                            <ol class="mobileSelectYears">
+                                <li>
+                                    <a href="all_magazine.html">全部年份</a>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2020.html">2020年</a>
+                                </li>
+                                <li>
+                                    <a href="all_magazine 2019.html">2019年</a>
+                                </li>
+                                <li>
+                                    <a href="#">2018年</a>
+                                </li>
+                                <li>
+                                    <a href="#">2017年</a>
+                                </li>
+                                <li>
+                                    <a href="#">2016年</a>
+                                </li>
+                            </ol>
                             <div class="allMagazine">
                                 <ol class="allMagazineList">
                                     <h2>All Magazine List</h2>
@@ -276,16 +296,16 @@
                            <a href="all_magazine.html"><span>各期雜誌</span></a>
                         </li>
                         <li>
-                            <a href="story_allArea.html"><span>銷售群像</span></a>
+                            <a href="#salesId"><span>銷售群像</span></a>
                         </li>
                         <li>
-                            <a href="index.html#aboutId"><span>關於大誌</span></a>
+                            <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="index.html#supportId"><span>訂閱支持</span></a>
+                            <a href="#"><span>訂閱支持</span></a>
                         </li>
                         <li>
-                            <a href="index.html#salePointsId"><span>販售場所</span></a>
+                            <a href="#"><span>販售場所</span></a>
                         </li>
                     </ul>
                 </nav>
@@ -320,12 +340,12 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo">
+                <ul class="footerInfo contactInfo">
                     <li>
                         <ul class="footerAboutIssue">
-                            <li>地址： 八德路一段28號2樓</li>
-                            <li>電話：02-23222607</li>
-                            <li>傳真：02-23222517</li>
+                            <li>地址:八德路一段28號2樓</li>
+                            <li>電話:02-23222607</li>
+                            <li>傳真:02-23222517</li>
                         </ul>
                     </li>
                     <li>
