--- a/story_ HsinchuTrainStation.html
+++ b/story_ HsinchuTrainStation.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Hsinchu TrainStation</title>
+    <title>新竹火車站</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -34,10 +34,14 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>Story</h1>
+                <h1>新竹火車站</h1>
                 <div class="headerPic">
-                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture"></a>
+                     <a href="story_allArea.html">
+                        <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
+                    </a>
+                    <a href="story_allArea.html">
+                        <img class="mobileHeaderPic" src="material/02-PAD/03-story/NewPage_story-title-PAD.svg" alt="Mobile Header Picture">
+                    </a>
                 </div>
             </header>
             <main>
@@ -189,7 +193,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo">
+                <ul class="footerInfo contactInfo">
                     <li>
                         <ul class="footerAboutIssue">
                             <li>地址： 八德路一段28號2樓</li>
