--- a/story_TaipeiNTUH.html
+++ b/story_TaipeiNTUH.html
@@ -36,8 +36,12 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                    <a href="story_allArea.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
-                        alt="Header Picture"></a>
+                     <a href="story_allArea.html">
+                        <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
+                    </a>
+                    <a href="story_allArea.html">
+                        <img class="mobileHeaderPic" src="material/02-PAD/03-story/NewPage_story-title-PAD.svg" alt="Mobile Header Picture">
+                    </a>
                 </div>
             </header>
             <main>
@@ -174,7 +178,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo">
+                <ul class="footerInfo contactInfo">
                     <li>
                         <ul class="footerAboutIssue">
                             <li>地址： 八德路一段28號2樓</li>
