--- a/story_southArea.html
+++ b/story_southArea.html
@@ -18,7 +18,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story SouthArea</title>
+    <title>南部地區故事</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="css/reset.css">
@@ -30,9 +30,14 @@
     <div class="allContent">
         <div class="asideContent">
             <header class="header">
-                <h1>All Story</h1>
+                <h1>南部地區故事</h1>
                 <div class="headerPic">
-                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true" alt="Header Picture">
+                     <a href="story_allArea.html">
+                        <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
+                    </a>
+                    <a href="story_allArea.html">
+                        <img class="mobileHeaderPic" src="material/02-PAD/03-story/NewPage_story-title-PAD.svg" alt="Mobile Header Picture">
+                    </a>
                 </div>
             </header>
             <main>
@@ -96,6 +101,26 @@
                                 </li>
                             </ol>
                             <div class="southStory">
+                                <ol class="mobileSelect">
+                                    <li>
+                                        <a href="story_allArea.html">全部地區</a>
+                                    </li>
+                                    <li>
+                                        <a href="story_northArea.html">北部地區</a>
+                                    </li>
+                                    <li>
+                                        <a href="story_centralArea.html">中部地區</a>
+                                    </li>
+                                    <li>
+                                        <a href="story_southArea.html">南部地區</a>
+                                    </li>
+                                    <li>
+                                        <a href="story_eastArea.html">東部地區</a>
+                                    </li>
+                                    <li>
+                                        <a href="story_otherArea.html">海外</a>
+                                    </li>
+                                </ol>
                                 <ol class="southStoryList">
                                     <h2>North Area Story List</h2>
                                     <li>
@@ -190,7 +215,7 @@
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo">
+                <ul class="footerInfo contactInfo">
                     <li>
                         <ul class="footerAboutIssue">
                             <li>地址： 八德路一段28號2樓</li>
