--- a/all_magazine.html
+++ b/all_magazine.html
@@ -287,13 +287,13 @@
 
         <div class="asideBar">
                 <div class="asideLogo">
-                    <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+                    <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
                 </div>
                 <nav>
                     <h2>Aside Navigation</h2>
                     <ul class="asideNavBarList">
                         <li>
-                           <a href="all_magazine.html"><span>各期雜誌</span></a>
+                           <a href="#issueId"><span>各期雜誌</span></a>
                         </li>
                         <li>
                             <a href="#salesId"><span>銷售群像</span></a>
@@ -302,10 +302,13 @@
                             <a href="#aboutId"><span>關於大誌</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>訂閱支持</span></a>
+                            <a href="#supportId"><span>訂閱支持</span></a>
                         </li>
                         <li>
-                            <a href="#"><span>販售場所</span></a>
+                            <a href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
                         </li>
                     </ul>
                 </nav>
