--- a/story_ HsinchuTrainStation.html
+++ b/story_ HsinchuTrainStation.html
@@ -131,32 +131,32 @@
         </div>
 
         <div class="asideBar">
-            <div class="asideLogo">
-                <a href="index.html"><img
-                        src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true"
-                        alt="Aside Big Issue Logo"></a>
-            </div>
-            <nav>
-                <h2>Aside Navigation</h2>
-                <ul class="asideNavBarList">
-                    <li>
-                        <a href="index.html#issueId">各期雜誌</a>
-                    </li>
-                    <li>
-                        <a href="index.html#salesId">銷售群像</a>
-                    </li>
-                    <li>
-                        <a href="index.html#aboutId">關於大誌</a>
-                    </li>
-                    <li>
-                        <a href="index.html#supportId">訂閱支持</a>
-                    </li>
-                    <li>
-                        <a href="index.html#salePointsId">販售場所</a>
-                    </li>
-                </ul>
-                </ul>
-            </nav>
+                <div class="asideLogo">
+                    <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
+                </div>
+                <nav>
+                    <h2>Aside Navigation</h2>
+                    <ul class="asideNavBarList">
+                        <li>
+                           <a href="#issueId"><span>各期雜誌</span></a>
+                        </li>
+                        <li>
+                            <a href="#salesId"><span>銷售群像</span></a>
+                        </li>
+                        <li>
+                            <a href="#aboutId"><span>關於大誌</span></a>
+                        </li>
+                        <li>
+                            <a href="#supportId"><span>訂閱支持</span></a>
+                        </li>
+                        <li>
+                            <a href="#salePointsId"><span>販售場所</span></a>
+                        </li>
+                        <li>
+                            <a href="#"><span>回到頂端</span></a>
+                        </li>
+                    </ul>
+                </nav>
         </div>
     </div>
     <footer class="footer">
