--- a/story_YunlinYunTech.html
+++ b/story_YunlinYunTech.html
@@ -20,7 +20,7 @@
     <meta property="og:side_name" content="">
     <meta property="fb:app_id" content="">
 
-    <title>Story Yunlin YunTech</title>
+    <title>Story Taichung Eslite</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -36,12 +36,8 @@
             <header class="header">
                 <h1>Story</h1>
                 <div class="headerPic">
-                     <a href="story_allArea.html">
-                        <img class="pcHeaderPic" src="material/01-PC/03-story/NewPage_story-title-PC.svg" alt="Header Picture">
-                    </a>
-                    <a href="story_allArea.html">
-                        <img class="mobileHeaderPic" src="material/02-PAD/03-story/NewPage_story-title-PAD.svg" alt="Mobile Header Picture">
-                    </a>
+                    <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/03-story/NewPage_story-title-PC.png?raw=true"
+                        alt="Header Picture">
                 </div>
             </header>
             <main>
@@ -54,7 +50,7 @@
                                     <a href="story_TaichungEslite.html">上一則</a>
                                 </li>
                                 <li>
-                                    <a href="story_YunlinYunTech.html">本則</a>
+                                    <a href="story_TaicungYunTech.html">本則</a>
                                 </li>
                                 <li>
                                     <a href="story_ DouliuTrainStation.html">下一則</a>
@@ -77,7 +73,7 @@
                                 </li>
                                 <!-- 區域所在位置名稱 -->
                                 <li>
-                                    <a href="story_YunlinYunTech.html"><span>雲林科技大學</span></a>
+                                    <a href="story_TaicungYunTech.html"><span>雲林科技大學</span></a>
                                 </li>
                             </ol>
                             <article>
@@ -130,9 +126,6 @@
 
                                     </div>
                                 </div>
-                                <button class="moreBtn">
-                                    <a href="story_allArea.html">回到故事列表</a>
-                                </button>
                             </article>
                         </div>
                     </div>
@@ -141,32 +134,29 @@
         </div>
 
         <div class="asideBar">
-                <div class="asideLogo">
-                    <a href="index.html"><img src="material/logo/Nav_logo-01.png" alt="Aside Big Issue Logo"></a>
-                </div>
-                <nav>
-                    <h2>Aside Navigation</h2>
-                    <ul class="asideNavBarList">
-                        <li>
-                           <a href="#issueId"><span>各期雜誌</span></a>
-                        </li>
-                        <li>
-                            <a href="#salesId"><span>銷售群像</span></a>
-                        </li>
-                        <li>
-                            <a href="#aboutId"><span>關於大誌</span></a>
-                        </li>
-                        <li>
-                            <a href="#supportId"><span>訂閱支持</span></a>
-                        </li>
-                        <li>
-                            <a href="#salePointsId"><span>販售場所</span></a>
-                        </li>
-                        <li>
-                            <a href="#"><span>回到頂端</span></a>
-                        </li>
-                    </ul>
-                </nav>
+            <div class="asideLogo">
+                <a href="index.html"><img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/logo/Nav_logo-01.png?raw=true" alt="Aside Big Issue Logo"></a>
+            </div>
+            <nav>
+                <h2>Aside Navigation</h2>
+                <ul class="asideNavBarList">
+                    <li>
+                        <a href="index.html#issueId">各期雜誌</a>
+                    </li>
+                    <li>
+                        <a href="index.html#salesId">銷售群像</a>
+                    </li>
+                    <li>
+                        <a href="index.html#aboutId">關於大誌</a>
+                    </li>
+                    <li>
+                        <a href="#">訂閱支持</a>
+                    </li>
+                    <li>
+                        <a href="#">販售場所</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
     <footer class="footer">
@@ -175,30 +165,34 @@
                 <ul class="footerInfo">
                     <li>
                         <div class="fooerLogo">
-                            <a href="index.html"><img a src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
-                                alt=""></a>
+                            <img src="https://github.com/Soumeteor/the-big-iusse/blob/master/material/01-PC/07-footer/fotterLogo.png?raw=true"
+                                alt="">
+                        </div>
                     </li>
                     <li>
                         <ul class="footerSocial">
                             <li>
-                                <a href="https://zh-tw.facebook.com/bigissue.tw">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg" alt="">
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_fb.svg"
+                                        alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/bigissue.tw/">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg" alt="">
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_ig.svg"
+                                        alt="">
                                 </a>
                             </li>
                             <li>
-                                <a href="mailto:service@bigissue.tw">
-                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg" alt="">
+                                <a href="#">
+                                    <img src="https://raw.githubusercontent.com/Soumeteor/the-big-iusse/aa5682bc9e55b6bacee82e516c90a2724e25e310/material/01-PC/07-footer/icon_email.svg"
+                                        alt="">
                                 </a>
                             </li>
                         </ul>
                     </li>
                 </ul>
-                <ul class="footerInfo contactInfo">
+                <ul class="footerInfo">
                     <li>
                         <ul class="footerAboutIssue">
                             <li>地址： 八德路一段28號2樓</li>
