--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                                 </div>
                                 <div class="mobileTaiwanPoint">
                                     <ol class="mobilePointList">
-                                        <li class="mobileArea areaShow">北部</li>
+                                        <li class="mobileArea areaOpen">北部</li>
                                         <li class="mobileArea">中部</li>
                                         <li class="mobileArea">南部</li>
                                         <li class="mobileArea">東部</li>
