--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <!-- 為什麼input 沒有使用 display none，會跳回最頂端？ -->
                 <div class="mobileNavBar">
                     <div class="logo">
-                        <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        <a href="index.html">
+                            <img class="menuOpenLogo" src="material/logo/LOGO-wt.svg" alt="Big Issue Logo">
+                        </a>
                     </div>
                 </div> 
                 <label class="menuCtrl" for="headerMenuCtrl">Menu</label>
